--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-body {
 
-    margin: 0;
-    font-family: "Helvetica", sans-serif;
-}
 
 .navbar {
     background-color: #333;
@@ -29,7 +25,7 @@ body {
     color: #fff;
     text-decoration: none;
     margin-left: 20px;
-    margin-right:15px
+    margin-right:50px
 }
 
 .nav-right a:hover {
@@ -43,7 +39,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #fff;
+    background-color: #4740401f;
     
 }
 
@@ -71,3 +67,12 @@ blockquote {
     border-left: 4px solid #333;
     padding-left: 10px;
 }
+footer {
+    background-color: #f4f4f4;
+    padding: 20px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: index 1000;
+    position: fixed; }
