--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+/* navbar styling */
 
 .navbar {
     background-color: #333;
@@ -6,12 +7,13 @@
     display: flex;
     justify-content:space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 10px 10px;
     margin:0;
     width:100%;
     z-index: index 1000;
-    position: fixed;
+    position:fixed;
     top: 0; 
+    padding-top:20px;
 
 }
 
@@ -32,10 +34,12 @@
     text-decoration: underline;
 }
 /* Website CSS */
+*
+
 body {
     font-family: "Helvetica", sans-serif;
     margin: 0;
-    display: flex;
+    display:flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -44,9 +48,9 @@ body {
 }
 
 .container {
-    max-width: 800px;
+    max-width: 80%;
     background-color: #fff;
-    padding: 20px;
+    padding: 20%;
     border-radius: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -57,7 +61,7 @@ body {
 }
 
 .content {
-    margin-top: 20px;
+    margin-top: 20%;
     text-align: center;
 }
 
@@ -82,3 +86,5 @@ footer {
     a.active {
         color:red
     }
+
+  
