--- a/form.css
+++ b/form.css
@@ -1,50 +1,39 @@
 * {
     box-sizing: border-box;
-  }
+}
 
-
-  input[type=text], select, textarea {
+input[type="text"],
+select,
+textarea {
     width: 100%;
     padding: 12px;
     border: 1px solid #ccc;
     margin-top: 8px;
     margin-bottom: 16px;
     resize: vertical;
-  }
-  
-  input[type=submit] {
+}
+
+input[type="submit"] {
     background-color: #0473aa;
     color: white;
     padding: 12px 20px;
     border: none;
     cursor: pointer;
-  }
-  
-  input[type=submit]:hover {
-    background-color: #0473aa;
-  }
-  
+}
 
-  .container {
+input[type="submit"]:hover {
+    background-color: #0473aa;
+}
+
+.contain {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 10px;
-  }
-  
+}
 
-  .column {
+.column {
     float: left;
     width: 50%;
     margin-top: 6px;
     padding: 20px;
-  }
-  
- 
-
-  
-  Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other *
-  @media screen and (max-width: 300px) {
-    .column, input[type=submit] 
-      width: 100%;
-      margin-top: 0;
-    }
+}
