--- a/style.css
+++ b/style.css
@@ -8,11 +8,10 @@
     width: 100%;
     position: fixed;
     top: 0;
-    max-height:15%
+    max-height: 15%;
 }
 
 .nav-left {
-    
     align-items: center;
     float: left;
     padding-left: 1%;
@@ -32,12 +31,12 @@
 body {
     font-family: "Helvetica", sans-serif;
     margin: 0px;
-    display:flex-shrink;
+    display: flex-shrink;
     justify-content: center;
     align-items: center;
     height: 90%;
     background-color: #4740401f;
-    padding-top: 1%;
+    padding-top: 10%;
 }
 
 .container {
@@ -47,7 +46,7 @@ body {
     padding: 15%;
     border-radius: 5%;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    display:flex;
+    display: flex;
 }
 
 .photo img {
@@ -59,7 +58,6 @@ body {
     margin-top: 10%;
     text-align: center;
 }
-
 
 blockquote {
     font-style: italic;
@@ -102,8 +100,17 @@ nav li {
 }
 
 p {
-    padding-right:5%;
-padding-left: 5%;
+    padding-right: 5%;
+    padding-left: 5%;
 }
 
 /* Resize mobile images */
+@media (max-width: 600px) {
+    body {
+        font-size: 50%;
+    }
+    /* agjust image */
+    img {
+        max-width: 40%;
+    }
+}
